syntax = "proto3";

option go_package = "./;sub";

package sub;
import "google/api/annotations.proto";

service SubService {
  rpc HandleSub (SubRequest) returns (SubReply) {
    option (google.api.http) = {
      post: "/v1/sub/handleSub"
      body: "*"
    };
  }
}

message SubRequest {
  double a = 1;
  double b = 2;
}

message SubReply {
  double result = 1;
}